--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <!-- <style>
         body{
             background-color:chocolate ;
         }
 
-    </style>
+    </style> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <br>
+   <!-- <br>
    <table>
         <tr>
             <td><a href="Login.html"> Login</a> </td>
@@ -85,6 +85,24 @@
    </div>
 
 
-    <br>
+    <br> -->
+
+
+
+    <div class="navbar">
+        <div class="nav1"><img src="Assets/logo.png" alt=""></div>
+        <div class="nav2">
+            <div class="navigation"><a href="#">HOME</a></div>
+            <div class="navigation"><a href="#">PRODUCT</a></div>
+            <div class="navigation"><a href="#">DEALS</a></div>
+            <div class="navigation"><a href="#">CONTACT</a></div>
+        </div>
+        <div class="nav3">
+            <i class="fa-brands fa-facebook">
+                <a href="#"></a>
+            </i>
+        </div>
+    </div>
+
 </body>
 </html>
